# MultiCamSLAM

./: Datacollection.md  Doc_todos.md  Dockerfile  LICENSE  README.md  build.sh  dataprocessing.md  evaluation.md
LFApps/: CMakeLists.txt  package.xml
LFApps/docker/: setup.txt
LFApps/include/: ParseSettings.h  typedefs.h
LFApps/params/: SegmentSettings.yaml  camchain.yaml  config_car.cfg  config_indoor.cfg  lf_backend.yaml  lf_frontend.yaml  lf_frontend_nov.yaml  lf_slam_config.cfg  recon_params.yaml
LFApps/src/: ParseSettings.cpp  lf_slam_app.cpp
LFDataUtils/: CMakeLists.txt  package.xml
LFDataUtils/include/LFDataUtils/: CamArrayConfig.h  DatasetReader.h  DatasetReaderBase.h  LFDataUtilParams.h  RosDataReader.h  RosbagParser.h
LFDataUtils/src/: CamArrayConfig.cpp  DatasetReader.cpp  DatasetReaderBase.cpp  RosDataReader.cpp  RosbagParser.cpp
LFSlam/: CMakeLists.txt  package.xml
LFSlam/include/LFSlam/: Backend.h  FrontEnd.h  FrontEndBase.h  GlobalMap.h  GtsamFactorHelpers.h  LFSlamParams.h  LightFieldFrame.h  LoopCloser.h  MonoBackEnd.h  MonoFrame.h  MonoFrontEnd.h  ORBextractor.h  OpenGlViewer.h
LFSlam/src/: Backend.cpp  FrontEnd.cpp  GlobalMap.cpp  LightFieldFrame.cpp  LoopCloser.cpp  MonoBackEnd.cpp  MonoFrame.cpp  MonoFrontEnd.cpp  ORBextractor.cpp  OpenGlViewer.cpp  OurFixedLagSmoother.cpp  time_measurement.cpp
LFSlam/src/loopclosure_analysis/: CMakeLists.txt  demo_orb.cpp  test_bow.cpp
LFSlam/src/tests_misc/: CMakeLists.txt  calib_04_14_2021.txt  gtsam_bad_mono.cpp
MCApps/: CMakeLists.txt  package.xml
MCApps/include/: LiveViewer.h  ParseSettings.h  std_include.h
MCApps/params/: lf_backend.yaml  lf_frontend.yaml  lf_slam_config.cfg  rviz_conf.rviz
MCApps/src/: LiveViewer.cpp  MonoSlamApp.cpp  ParseSettings.cpp  lf_slam_app.cpp
MCDataUtils/: CMakeLists.txt  package.xml
MCDataUtils/include/MCDataUtils/: DatasetReader.h  DatasetReaderBase.h  MCDataUtilParams.h  RosDataReader.h
MCDataUtils/src/: CamArrayConfig.cpp  DatasetReader.cpp  DatasetReaderBase.cpp  RosDataReader.cpp  RosbagParser.cpp
MCSlam/: CMakeLists.txt  package.xml
MCSlam/include/MCSlam/: Backend.h  DepthReconstructor.h  FrontEnd.h  FrontEndBase.h  GlobalMap.h  GtsamFactorHelpers.h  LoopCloser.h  MCSlamParams.h  MonoBackEnd.h  MonoFrame.h  MonoFrontEnd.h  MultiCameraFrame.h  ORBVocabulary.h  ORBextractor.h  OpenGlViewer.h  OurFixedLagSmoother.h  utils.h
MCSlam/src/: Backend.cpp  DepthReconstructor.cpp  FrontEnd.cpp  GlobalMap.cpp  LoopCloser.cpp  MonoBackEnd.cpp  MonoFrame.cpp  MonoFrontEnd.cpp  MultiCameraFrame.cpp  ORBextractor.cpp  OpenGlViewer.cpp  OurFixedLagSmoother.cpp  time_measurement.cpp
MCSlam/src/loopclosure_analysis/: TemplatedLoopDetector.h  demoDetector.h  test_bow.cpp
MCSlam/src/tests_misc/: 24_09_2020_isec_indoor_vio_camchain.yaml  CMakeLists.txt  calib_24_09_2020.txt
common_utils/: CMakeLists.txt  package.xml
common_utils/include/common_utils/: NumpyConverter.h  StringEnumerator.hpp  matplotlibcpp.h  serialization.h  tools.h  utilities.h
common_utils/src/: NumpyConverter.cpp  Random.cpp  Timestamp.cpp  tools.cpp  utilities.cpp
scripts/python/: NonOverlappingCalibration.py  Trajectory_scripts.ipynb  gps_ros_to_tum.py  helper_functions.py  optitrack_log_to_tum.py  optitrack_ros_to_tum.py  parse_plot_lfslam_log.py  parse_plot_pose_stats.py  trajectory_analysis_targetbased.py  utilities.py
scripts/python/.ipynb_checkpoints/: Trajectory_scripts-checkpoint.ipynb
